--- a/hapi-fhir-jpaserver-example/pom.xml
+++ b/hapi-fhir-jpaserver-example/pom.xml
@@ -180,7 +180,7 @@
 					<configuration>  
 					  <path>/${project.build.finalName}</path>  
 					  <update>true</update>  
-					  <url>http:// localhost:8080/manager/text</url>  
+					  <url>http:// localhost:9090/manager/text</url>  
 					  <username>tomcat</username>  
 					  <password>tomcatuser</password>  
 					</configuration>  
@@ -204,6 +204,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<configuration>
+					<port>7070</port>
 					<archive>
 						<manifestEntries>
 							<Build-Time>${maven.build.timestamp}</Build-Time>
