--- a/pom.xml
+++ b/pom.xml
@@ -616,11 +616,11 @@
 					<artifactId>maven-war-plugin</artifactId>
 					<version>2.6</version>
 				</plugin>
-				<plugin>
+<!-- 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>cobertura-maven-plugin</artifactId>
 					<version>2.7</version>
-				</plugin>
+				</plugin> -->
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>animal-sniffer-maven-plugin</artifactId>
